# pokeman

./: 2DLandscape.json  BackgroundComponent.cpp  Box2DDebugDraw.cpp  CMakeLists.txt  CameraController.cpp  CameraController.hpp  Collidable.cpp  Collidable.hpp  Component.cpp  Component.hpp  Creature.cpp  Creature.h  GameObject.cpp  GameObject.hpp  GameState.h  Makefile  NPC.cpp  NPC.h  PhysicsComponent.cpp  PhysicsComponent.hpp  Player.cpp  Player.h  PokemanGame.cpp  PokemanGame.hpp  PokemanGreen.cpp  PokemanGreen.h  Projectile.cpp  Projectile.h  README.md  SideScrollingCamera.cpp  SideScrollingCamera.hpp  SoundSource.cpp  SoundSource.h  SpriteAnimationComponent.cpp  SpriteAnimationComponent.hpp  Trainer.cpp  Trainer.h  TrainerController.cpp  TrainerController.hpp  WorldGenerator.cpp  (+6 more)
Debug/: levelData.json  monsters.json
Debug/sprites/: bullet.json
Release/: levelData.json
Release/sprites/: ash.json
sprites/: screens.json
